--- a/apps/clientside-indv/src/app/app.component.html
+++ b/apps/clientside-indv/src/app/app.component.html
@@ -1,1 +1,1 @@
-<kelvin-nx-welcome></kelvin-nx-welcome> <router-outlet></router-outlet>
+<kelvin-user-list></kelvin-user-list> <router-outlet></router-outlet>
