Add Tailwind CSS and Flowbite, update UI components.

--- a/apps/clientside-indv/src/app/app.component.html
+++ b/apps/clientside-indv/src/app/app.component.html
@@ -1,1 +1,3 @@
-<kelvin-user-list></kelvin-user-list> <router-outlet></router-outlet>
+<clientside-header></clientside-header>
+<router-outlet></router-outlet>
+<clientside-footer></clientside-footer>
