--- a/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
+++ b/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
@@ -1,4 +1,9 @@
-<div *ngFor="let user of users">
-    <h2>{{ user.FirstName }} {{ user.LastName }}</h2>
-    <p>Birthdate: {{ user.birthDate | date: 'long' }}</p>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+    <div *ngFor="let user of users" class="bg-white shadow-md rounded px-4 py-4">
+        <h2 class="text-lg font-bold">{{ user.FirstName }} {{ user.LastName }}</h2>
+        <p class="text-gray-600">Birthdate: {{ user.birthDate | date: 'long' }}</p>
+        <button class="mt-2 px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-700">
+            See Details
+        </button>
+    </div>
 </div>
