--- a/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
+++ b/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
@@ -1,9 +1,41 @@
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-    <div *ngFor="let user of users" class="bg-white shadow-md rounded px-4 py-4">
-        <h2 class="text-lg font-bold">{{ user.FirstName }} {{ user.LastName }}</h2>
-        <p class="text-gray-600">Birthdate: {{ user.birthDate | date: 'long' }}</p>
-        <button class="mt-2 px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-700">
-            See Details
-        </button>
-    </div>
-</div>
+<div class="overflow-x-auto">
+    <table class="min-w-full leading-normal">
+      <thead>
+        <tr>
+          <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+            ID
+          </th>
+          <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+            Name
+          </th>
+          <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+            Birthdate
+          </th>
+          <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of users" class="hover:bg-gray-100">
+          <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+            <span class="text-gray-900">{{ user.id }}</span>
+          </td>
+          <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+            <div class="font-bold text-gray-900">{{ user.FirstName }} {{ user.LastName }}</div>
+          </td>
+          <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+            <p class="text-gray-600">{{ user.birthDate | date: 'long' }}</p>
+          </td>
+          <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm text-right">
+            <a class="inline-block text-center px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-700 mr-2"
+               [routerLink]="['/user', user.id]">
+              See Details
+            </a>
+            <button class="inline-block text-center px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-700">
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
