--- a/libs/angular-app/features/src/lib/user/user-edit/user-edit.component.html
+++ b/libs/angular-app/features/src/lib/user/user-edit/user-edit.component.html
@@ -8,7 +8,7 @@
 
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2">ID</label>
-                    <input type="text" name="id" value="{{ user?.id }}" class="p-3 bg-gray-200 rounded w-full" readonly>
+                    <input type="text" name="id" value="{{ user?._id }}" class="p-3 bg-gray-200 rounded w-full" readonly>
                 </div>
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2">First Name</label>
