--- a/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
+++ b/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
@@ -25,9 +25,11 @@
               [routerLink]="['/user', user._id]">
                See Details
               </a>
-              <button class="inline-block text-center px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-700">
-                Delete
-                </button>
+              <button class="inline-block text-center px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-700"
+              (click)="deleteUser(user._id)">
+               Delete
+              </button>
+      
           
             </div>
           </td>
