--- a/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
+++ b/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
@@ -1,4 +1,12 @@
 <div class="overflow-hidden rounded-lg border border-gray-200 shadow-md m-5">
+  <div class="overflow-hidden rounded-lg border border-gray-200 shadow-md m-5">
+    <div class="flex justify-between items-center bg-gray-50 px-6 py-4">
+      <h1 class="text-lg font-medium text-gray-900">Users</h1>
+      <a class="inline-block text-center px-4 py-2 bg-green-500 text-white font-semibold rounded hover:bg-green-700"
+         routerLink="/user/add">
+        Add User
+      </a>
+    </div>
     <table class="w-full border-collapse bg-white text-left text-sm text-gray-500">
       <thead class="bg-gray-50">
         <tr>
@@ -6,7 +14,7 @@
           <th scope="col" class="px-6 py-4 font-medium text-gray-900">Name</th>
           <th scope="col" class="px-6 py-4 font-medium text-gray-900">Email</th>
           <th scope="col" class="px-6 py-4 font-medium text-gray-900">Birthdate</th>
-          <th scope="col" class="px-6 py-4 font-medium text-gray-900"></th>
+          <th scope="col" class="px-6 py-4 font-medium text-gray-900"> </th>
         </tr>
       </thead>
       <tbody class="divide-y divide-gray-100 border-t border-gray-100">
