Add AddEventToUserComponent to app.routes.ts and features.module.ts

--- a/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
+++ b/libs/angular-app/features/src/lib/user/user-list/user-list.component.html
@@ -37,8 +37,11 @@
               (click)="deleteUser(user._id)">
                Delete
               </button>
-      
-          
+
+              <button class="inline-block text-center px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-700"
+              [routerLink]="['/user', user._id, 'add-event']">
+                Add Event
+              </button>          
             </div>
           </td>
         </tr>
